samples/_failures_safe/1761440316_cde144_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bdb690c.c: In function ‘main’:
./samples/SAFE/__tmp_5bdb690c.c:178:9: error: expected expression at end of input
  178 |         printf("Token %d: ", i +
      |         ^~~~~~
./samples/SAFE/__tmp_5bdb690c.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5bdb690c.c:178:9: error: expected declaration or statement at end of input
